fix: hide quick tools in minimized single display without cutting off gurbani

--- a/www/src/scss/viewer/shabad-deck/_shabad-deck.scss
+++ b/www/src/scss/viewer/shabad-deck/_shabad-deck.scss
@@ -25,7 +25,6 @@
   }
 
   &.single-display-minimized {
-    padding: 0 !important;
 
     & + .viewer-logo {
       left: 12px;
